# ROSINDUSTRIAL

./: industrial_training
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/catkin_tools_prebuild/: setup.sh
catkin_ws/devel/.private/descartes/: .catkin  local_setup.sh
catkin_ws/devel/.private/descartes_core/: .catkin
catkin_ws/devel/.private/descartes_moveit/: .catkin
catkin_ws/devel/.private/descartes_planner/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/descartes_tests/: .catkin  .rosinstall  setup.sh
catkin_ws/logs/descartes_moveit/: build.make.000.log.stderr
catkin_ws/logs/myworkcell_core/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
catkin_ws/logs/ur5_demo_descartes/: build.make.000.log.stderr
catkin_ws/logs/ur_kinematics/: build.make.000.log.stderr
catkin_ws/src/myworkcell_core/: CMakeLists.txt  package.xml
industrial_training2/gh_pages/_downloads/: ros-industrial-training-setup.sh
ros1_ws/: SH
ros1_ws/src/dexarm/: CMakeLists.txt
ros1_ws/src/dexarm/URDF/: DexArm.urdf.xacro  DexArm.urdf.xacro.org
ros1_ws/src/myworkcell_moveit_config/: .setup_assistant  package.xml
ros1_ws/src/myworkcell_support/: CMakeLists.txt  dexarm.rviz  package.xml
ros2_ws/src/myworkcell_core/: CMakeLists.txt  package.xml
ros2_ws/src/myworkcell_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/myworkcell_support/: CMakeLists.txt  package.xml
ros2_ws/src/myworkcell_support2/: CMakeLists.txt  package.xml
(+274 files in other folders)
